Converted and updated Gradle, updated Docker
Converted gradle to kotlin, updated gradle wrapper to 6.7.1, updated to
Java 15 and adjusted Docker. Renamed a number of files.

Converted gradle to kotlin, updated gradle wrapper, updated Docker