@@ -1,7 +1,7 @@
 plugins {
     java
-    id("io.spring.dependency-management") version "1.0.9.RELEASE"
-    id("org.springframework.boot") version "2.2.6.RELEASE"
+    id("io.spring.dependency-management") version "1.0.10.RELEASE"
+    id("org.springframework.boot") version "2.4.0"
 }
 
 repositories {
@@ -9,8 +9,9 @@ repositories {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_14
-    targetCompatibility = JavaVersion.VERSION_14
+    // Remove "--enable-preview" below for "record", probably version 16
+    sourceCompatibility = JavaVersion.VERSION_15
+    targetCompatibility = JavaVersion.VERSION_15
 }
 
 dependencies {
@@ -21,30 +22,19 @@ dependencies {
     implementation(files("libs/interactive-brokers-api-9.72.18.jar"))
 
     // Test code dependencies
-    testImplementation("org.springframework.boot:spring-boot-starter-test") {
-        exclude(group = "org.junit.vintage", module = "junit-vintage-engine")
-    }
+    testImplementation("org.springframework.boot:spring-boot-starter-test")
     testImplementation("io.projectreactor:reactor-test")
 }
 
+tasks.withType<JavaCompile> {
+    options.compilerArgs.add("--enable-preview")
+}
+
 tasks.test {
-    useJUnitPlatform {
-        // includeTags "integration", "feature-168"
-        // excludeTags "integration"
-    }
+    useJUnitPlatform()
+    jvmArgs("--enable-preview")
 }
 
 tasks.wrapper {
-    gradleVersion = "6.4.1"
-}
-
-springBoot {
-    buildInfo {
-        properties {
-            artifact = "theta-artifact"
-            group = "theta-group"
-            name = "theta-project"
-            version = "0.4"
-        }
-    }
+    gradleVersion = "6.7.1"
 }
